# elecium-substrate

./: .gitignore  Cargo.toml  Dockerfile  README.md
host-functions/: Cargo.toml
host-functions/src/: lib.rs
node/: Cargo.toml
node/src/: service.rs  zk_host_fn.rn
pallets/pallet-vote/: Cargo.toml
pallets/pallet-vote/src/: lib.rs
runtime/: Cargo.toml
runtime/src/: genesis_config_presets.rs  lib.rs
